fix article max-width rendering on small devices

--- a/src/homepage/static_src/styles.css
+++ b/src/homepage/static_src/styles.css
@@ -82,7 +82,7 @@
 }
 
 @utility centered-link-list {
-    @apply flex justify-evenly m-2;
+    @apply flex flex-wrap justify-evenly m-2;
 }
 
 .prose {
